@@ -18,7 +18,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)diacrit.c	1.5 (gritter) 10/19/06
+ * Sccsid @(#)diacrit.c	1.6 (gritter) 1/10/08
  */
 
 # include "e.h"
@@ -41,8 +41,11 @@ diacrit(int p1, int type) {
 	nrwid(p1, effps, p1);
 	printf(".nr 10 %gp\n", VERT(max(eht[p1]-ebase[p1]-EM(1,ps),0)));	/* vertical shift if high */
 	printf(".if \\n(ct>1 .nr 10 \\n(10+\\s%s.25m\\s0\n", tsize(effps));
-	printf(".nr %d \\s%s.1m\\s0\n", t, tsize(effps));	/* horiz shift if high */
-	printf(".if \\n(ct>1 .nr %d \\s%s.15m\\s0\n", t, tsize(effps));
+	if (type != HAT && type != TILDE) {
+		printf(".nr %d \\s%s.1m\\s0\n", t, tsize(effps));	/* horiz shift if high */
+		printf(".if \\n(ct>1 .nr %d \\s%s.15m\\s0\n", t, tsize(effps));
+	} else
+		printf(".nr %d 0\n", t);
 #endif /* NEQN */
 	switch(type) {
 		case VEC:	/* vec */
