@@ -6,6 +6,8 @@ Release ...
 * -mg macros: When reading the output of "ls" to emulate ".mso", use
   nofill mode to avoid artifacts from paragraph adjustment that cause
   the request to fail.
+* eqn: Do not displace "hat" and "tilde" horizontally (bug reported by
+  Joerg van den Hoff).
 * eqn: Fixed the types of yylex() and yypv.
 
 Release 070908
